--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-style": "webpack --progress --colors --config build-style.config.js",
     "dist": "webpack --progress --colors --config dist.config.js",
     "dist.min": "webpack --progress --colors --optimize-minimize --optimize-occurence-order --optimize-dedupe --config dist.min.config.js",
-    "build": "npm run lib && npm run dist && npm run dist.min && npm run build-style",
+    "build": "npm run lib && npm run dist && npm run dist.min",
     "serve": "http-server -p 9091",
     "dev": "webpack-dev-server --progress --colors --port 9090 --content-base http://localhost:9091"
   },
@@ -17,8 +17,10 @@
     "css-loader": "^0.9.0",
     "extract-text-webpack-plugin": "^0.3.5",
     "file-loader": "^0.8.1",
-    "gulp": "^3.8.10",
-    "gulp-react": "^2.0.0",
+    "gulp": "^3.8.11",
+    "gulp-react": "^3.0.0",
+    "gulp-webpack": "^1.2.0",
+    "gulp-webpack-build": "^0.2.6",
     "http-server": "^0.7.3",
     "jsx-loader": "^0.12.2",
     "style-loader": "^0.8.2",
@@ -28,8 +30,10 @@
     "webpack-dev-server": "^1.6.6"
   },
   "dependencies": {
-    "object-assign": "^2.0.0",
-    "react": "^0.12.1"
+    "object-assign": "^2.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=0.12.0"
   },
   "repository": {
     "type": "git",
