--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp": "^3.8.11",
     "gulp-react": "^3.0.0",
     "gulp-webpack": "^1.2.0",
-    "gulp-webpack-build": "^0.2.6",
+    "gulp-webpack-build": "^0.13.1",
     "http-server": "^0.7.3",
     "jsx-loader": "^0.12.2",
     "style-loader": "^0.8.2",
@@ -30,7 +30,8 @@
     "webpack-dev-server": "^1.6.6"
   },
   "dependencies": {
-    "object-assign": "^2.0.0"
+    "object-assign": "^2.0.0",
+    "react": "0.14.3"
   },
   "peerDependencies": {
     "react": ">=0.12.0"
